# PluviNet-Embedded

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild
main/inc/: ds3231.h  mqtt.h  sensor_hall.h  sht30.h  wifi.h
main/src/: ds3231.c  main.c  mqtt.c  sensor_hall.c  sht30.c  wifi.c
